--- a/BooksManager/BooksManager/Views/Account/Login.cshtml
+++ b/BooksManager/BooksManager/Views/Account/Login.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model BooksManager.Controllers.AccountController.LoginViewModel
+
+@{
     ViewData["Title"] = "Login";
 }
 
@@ -12,13 +14,15 @@
                     </h3>
                     <form asp-action="Login" method="post">
                         <div class="form-group mb-3">
-                            <label for="email" style="color: #6b4f4f;">Email</label>
-                            <input type="email" name="email" class="form-control" placeholder="Digite seu email" required />
+                            <label asp-for="Email" style="color: #6b4f4f;">Email</label>
+                            <input asp-for="Email" class="form-control" placeholder="Digite seu email" />
+                            <span asp-validation-for="Email" class="text-danger"></span>
                         </div>
 
                         <div class="form-group mb-4">
-                            <label for="password" style="color: #6b4f4f;">Senha</label>
-                            <input type="password" name="password" class="form-control" placeholder="Digite sua senha" required />
+                            <label asp-for="Password" style="color: #6b4f4f;">Senha</label>
+                            <input asp-for="Password" type="password" class="form-control" placeholder="Digite sua senha" />
+                            <span asp-validation-for="Password" class="text-danger"></span>
                         </div>
 
                         <button type="submit" class="btn btn-primary w-100">
